--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -1,7 +1,6 @@
 global
-	log /dev/log	local0
-	log /dev/log	local1 notice
-	chroot /var/lib/haproxy
+	log 127.0.0.1	local0
+	log 127.0.0.1	local1 notice
 	user haproxy
 	group haproxy
 	daemon
