--- a/wordcount/pom.xml
+++ b/wordcount/pom.xml
@@ -26,6 +26,16 @@
       <artifactId>mariadb-java-client</artifactId>
       <version>2.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.6</version>
+    </dependency>
   </dependencies>
 
   <build>
